@@ -91,18 +91,21 @@
       <a href="./getinvolved.html">Get involved</a> page.</p>
       
     <h3>Minimum Requirements</h3>
-      Same as stable version.
+      Same as stable version, except
+      <ul>
+      <li><a href="http://pygtk.org" target="_blank">PyGObject</a> 2.15.3</li>
+      </ul>
       
     <h3>Latest release</h3>
 
-      <p>There is currently no separate development release.</p>
-      <!--
+      <!-- <p>There is currently no separate development release.</p> -->
+      
       <div class="download">
-      <a href="http://download.gnome.org/sources/deskbar-applet/2.23/deskbar-applet-2.23.92.tar.gz"
+      <a href="http://download.gnome.org/sources/deskbar-applet/2.25/deskbar-applet-2.25.1.tar.gz"
       title="Source code of the latest unstable release">
       <img src="./images/package-x-generic.png" alt="source package" />
-      Deskbar-Applet 2.23.92</a></div>
-      
+      Deskbar-Applet 2.25.1</a></div>
+    <!--  
     <h3>Past releases</h3>
       -->
     </div>
