@@ -89,6 +89,18 @@
     <div id="right">
         <div id="news">
 	    <h2 class="">News</h2>
+	    <h3>November 03, 2008</h3>
+	      <b>Unstable</b> version 2.25.1 released.<br />
+			In this release all gnomevfs calls have been ported
+			to gio and glade files are replaced by GTK builder UI
+			files. Therefore, pygobject 2.15.3 or later is required.
+			<ul>
+			<li>Fixed <a href="http://bugzilla.gnome.org/show_bug.cgi?id=557570">#557570</a>, Crash when proxy port changed</li>
+			<li>Fixed <a href="http://bugzilla.gnome.org/show_bug.cgi?id=551218">#551218</a>, Use of strings "Croation" and "Croatian"</li>
+			<li>Fixed <a href="http://bugzilla.gnome.org/show_bug.cgi?id=552203">#552203</a>, Typo: affect</li>
+			</ul>
+			<a href="download.html">Download it</a>
+	    
 	    <h3>October 20, 2008</h3>
 	      <b>Stable</b> version 2.24.1 released.<br />
 	      This release features updated translations only.
