@@ -1,3 +1,9 @@
+2008-11-03	Sebastian Pölsterl	<sebp@cvs.gnome.org>
+
+	* download.html:
+	* index.html:
+	Added 2.25.1 release
+
 2008-09-22	Sebastian Pölsterl	<sebp@cvs.gnome.org>
 
 	* download.html:
